# teraranger

./: install_udev.sh  package.xml  uninstall_udev.sh
cfg/: 99-usb-teraranger.rules
include/teraranger/: teraranger_evo.h
src/: teraranger_evo.cpp
