<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>teraranger</name>
  <version>2.1.0</version>
  <description>This package provides ros nodes for single sensors from Terabee</description>

  <maintainer email="krzysztof.zurad@terabee.com">Krzysztof Żurad</maintainer>
  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>
  <maintainer email="baptiste.potier@terabee.com">Baptiste Potier</maintainer>

  <url type="website">http://wiki.ros.org/teraranger</url>

  <author email="pierre-louis.kabaradjian@terabee.com">Kabaradjian Pierre-Louis</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>teraranger_array</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>teraranger_array</exec_depend>

  <export>
  </export>
</package>
